--- a/movie-app/src/components/Header/Header.css
+++ b/movie-app/src/components/Header/Header.css
@@ -5,12 +5,12 @@
     display: flex;
     justify-content: center;
     text-transform: uppercase;
-    background-color: #39445a;
+    background-color: #aefb42;
     font-family: "Montserrat", sans-serif;
     font-size: 5vw;
     padding-bottom: 15px;
     box-shadow: 0px 1px 5px black;
-    color: white;
+    color: rgb(76, 68, 68);
     z-index: 100;
   }
   
