--- a/movie-app/src/components/ContentModal/ContentModal.css
+++ b/movie-app/src/components/ContentModal/ContentModal.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 
-/* .ContentModal__landscape {
+.ContentModal__landscape {
+ 
   object-fit: contain;
   border-radius: 10px;
-} */
+}
 
 .ContentModal__portrait {
   display: none;
@@ -53,7 +54,7 @@
   display: flex;
   height: 40%;
   overflow-y: scroll;
-  padding: 15px;
+  padding: 13px;
   border-radius: 20px;
   scrollbar-width: thin; /* Firefox */
   box-shadow: inset 0 0 5px #000000;
