--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -3,8 +3,10 @@
 }
 
 .app {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
-  background-color: #d6fba1;
+  background-color: #d4f98b;
   color: rgb(10, 0, 0);
   padding-top: 130px;
   padding-bottom: 70px;
